logs/02_eda_visualisation.log
=== STDOUT ===

=== STDERR ===
  File "/home/runner/work/aptispace-datascience-projet/aptispace-datascience-projet/src/02_eda_visualisation.py", line 17
    %matplotlib inline
    ^
SyntaxError: invalid syntax
